--- a/jsonschema/Cargo.toml
+++ b/jsonschema/Cargo.toml
@@ -22,7 +22,7 @@ draft201909 = []
 
 [dependencies]
 serde_json = "1"
-serde = "1"
+serde = { version = "1", features = ["derive"] }
 url = "2"
 lazy_static = "1"
 percent-encoding = "2"
